# lum

./: Cargo.toml  LICENSE  README.md  shell.nix
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: build_and_test.yml  check_version_bump.yml  deploy_prerelease.yml  deploy_release.yml
src/: bot.rs  config.rs  event.rs  lib.rs  log.rs  main.rs  service.rs  setlock.rs
src/config/: config_handler.rs  environment_config.rs  file_config.rs
src/event/: arc_observable.rs  event.rs  event_repeater.rs  observable.rs  subscriber.rs  subscription.rs
src/service/: discord.rs  service.rs  service_manager.rs  taskchain.rs  types.rs  watchdog.rs
