[package]
name = "lum"
version = "0.3.10"
authors = ["Torben Schweren"]
edition = "2021"
rust-version = "1.80.0"
description = "Lum Discord Bot"
readme = "README.md"
repository = "https://github.com/lum-rs/lum"
license= "MIT"
keywords = ["chat", "discord", "bot", "framework"]
exclude = [".devcontainer", ".github"]

[profile.release]
debug = false
opt-level = 3
lto = true

[profile.dev]
debug = true
opt-level = 0
lto = false

[dependencies]
async-trait = "0.1.83"
dirs = "5.0.1"
downcast-rs = "1.2.0"
fern = { version = "0.7.0", features = ["chrono", "colored", "date-based"] }
humantime = "2.1.0"
log = { version = "0.4.20", features = ["serde"] }
serde = { version = "1.0.214", features = ["derive"] }
serde-env = "0.2.0"
serde_json = "1.0.132"
serenity = { version = "0.12.0", default-features=false, features = ["builder", "cache", "collector", "client", "framework", "gateway", "http", "model", "standard_framework", "utils", "voice", "default_native_tls", "tokio_task_builder", "unstable_discord_api", "simd_json", "temp_cache", "chrono", "interactions_endpoint"] }
sqlx = { version = "0.8.0", features = ["runtime-tokio", "any", "postgres", "mysql", "sqlite", "tls-native-tls", "migrate", "macros", "uuid", "chrono", "json"] }
thiserror = "1.0.66"
tokio = { version = "1.41.0", features = ["full"] }
uuid = { version = "1.11.0", features = ["fast-rng", "macro-diagnostics", "v4"] }
